# genie_sv

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  package-lock.json  pyproject.toml  test_box_spacing.docx  test_box_spacing.py  test_box_table.docx  test_box_table.py  test_concept_map.docx  test_hierarchy.docx  test_hierarchy2.docx
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_seed_data.py  003_workflow_runs.py  008_docforge.py  009_docagent.py  009_wiki_system.py
app/: __init__.py  config.py  database.py  dependencies.py
app/models/: __init__.py  docagent.py  docforge.py  export.py  generation.py  prompt.py  source.py  user.py  wiki.py  workflow.py
app/routers/: __init__.py  datasets.py  docagent.py  docforge.py  exports.py  formats.py  generate.py  generations.py  health.py  infographics.py  prompt_chains.py  prompt_folders.py  prompts.py  sources.py  users.py  wiki.py  workflows.py
app/schemas/: __init__.py  docagent.py  docforge.py  export.py  generation.py  prompt.py  source.py  user.py  wiki.py  workflow.py
app/services/: __init__.py  docagent.py  docforge.py  document_export.py  docx_formatter.py  file_parser.py  llm.py  storage.py  wiki_agent.py  wiki_engine.py  workflow.py
app/utils/: prompt_builder.py
